rusqlite_migration/src/tests/snapshots/rusqlite_migration__tests__core__invalid_fk_check_test.snap
---
source: rusqlite_migration/src/tests/core.rs
expression: migrations.validate()
snapshot_kind: text
---
Err(
    ForeignKeyCheck(
        [
            ForeignKeyCheckError {
                table: "fk2",
                rowid: 1,
                parent: "fk1",
                fkid: 0,
            },
            ForeignKeyCheckError {
                table: "fk2",
                rowid: 2,
                parent: "fk1",
                fkid: 0,
            },
        ],
    ),
)
