rusqlite_migration/src/tests/snapshots/rusqlite_migration__tests__core__read_only_db_all_valid.snap
---
source: rusqlite_migration/src/tests/synch.rs
expression: e
---
Err(
    RusqliteError {
        query: "CREATE TABLE m1(a, b); CREATE TABLE m2(a, b, c);",
        err: SqliteFailure(
            Error {
                code: ReadOnly,
                extended_code: 8,
            },
            Some(
                "attempt to write a readonly database",
            ),
        ),
    },
)
