rusqlite_migration/src/tests/snapshots/rusqlite_migration__tests__core__user_version_error.snap
---
source: rusqlite_migration/src/tests/core.rs
expression: e
snapshot_kind: text
---
Err(
    RusqliteError {
        query: "PRAGMA user_version = 1; -- Approximate query",
        err: SqliteFailure(
            Error {
                code: ReadOnly,
                extended_code: 8,
            },
            Some(
                "attempt to write a readonly database",
            ),
        ),
    },
)
